# brijsim

./: README.md  main.py  pyproject.toml
assets/ships/: demo_ship.yaml
client/: README.md  index.html  package-lock.json  package.json
client/app/: app.js  router.js
client/app/components/: device-bar-gauge.gjs  device-button.gjs  device-detail.gjs  device-widget.gjs  labeled-string.gjs
client/app/config/: environment.js
client/app/routes/: eng-panel.js
client/app/services/: server-connection.js
client/app/styles/: app.css
client/app/templates/: application.gjs  eng-panel.gjs  index.gjs
client/public/fonts/monda/: OFL.txt  README.txt
client/tests/: index.html  test-helper.js
client/tests/integration/components/: device-bar-gauge-test.gjs  device-button-test.gjs  device-detail-test.gjs  device-widget-test.gjs  labeled-string-test.gjs
client/tests/unit/routes/: eng-panel-test.js
src/brijsim/: __init__.py  body_3d.py  device_view.py  electrical_sim.py  energy_sim.py  flow_sim.py  node.py  region.py  server.py  server_ws.py  ship.py  ship_view.py
src/brijsim/devices/: computer.py  device.py  generator.py  hatch.py  panel.py  tanks.py
src/brijsim/elements/: computer.py  element.py  generator.py  tanks.py
src/brijsim/pydot/: __init__.py  body_3d.py  node.py  node_3d.py  scene_tree.py  transform_3d.py  vector3.py
src/brijsim/ship/: __init__.py  room.py  ship.py  ship_loader.py
src/brijsim/universe/: region.py  universe.py
tests/: test_electrical_network.py  test_energy_sim.py  test_flow_sim.py
(+1 files in other folders)
