[project]
name = "brijsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "nicegui>=3.5.0",
    "numpy>=2.4.1",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]

[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[project.scripts]
serve = "brijsim.server:main"
# Also, can start with `python -m brijsim.server` for autoreloading

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
